Refactoring: use stream's toList() method